# lab_lists

./: README.md  get_words.py  number_analysis.py  number_transformations.py  number_transformations_test.py  pyproject.toml  word_exercises.md  word_finder.py  word_transformations.py  words_100k.txt
