[project]
name = "lab-lists"
version = "0.1.0"
description = ""
authors = [
    {name = "ms.brown",email = "eqbrown@isf.edu.hk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pronouncing (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false